--- a/util/build.gradle
+++ b/util/build.gradle
@@ -31,7 +31,7 @@
 
 dependencies {
     compile depends.findbugs
-    compile depends.guava
+    compile depends.guava_tools
     testCompile depends.junit
 }
 
